--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <!-- And then your bundled js -->
   <script src="path/to/your/bundle.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
