nav fixed to be sticky correctly with the right margin and the right font size

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
 <title>Be a Giver | Prabhupada Marathon 2018</title>
 </head>
 
-<body>
+<body style="padding-bottom: 70px;">
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
